--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                         </ul>
                     </div>
                     <div class="bottom-container">
-                        <input min="0" type="number" class="amount-input" value="5000">
+                        <input min="0" type="text" class="amount-input" value="5000">
+
                         <span class="label">1 RUB = 0.0135 USD</span>
                     </div>
                 </div>
@@ -65,7 +66,8 @@
                         </ul>
                     </div>
                     <div class="bottom-container">
-                        <input min="0" type="number" class="amount-input" value="5000">
+                        <input min="0" type="text" class="amount-input" value="5000">
+
                         <span class="label">1 RUB = 0.0135 USD</span>
                     </div>
                 </div>
