--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Converter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./index.css" rel="stylesheet">
 </head>
 
@@ -26,12 +26,16 @@
                     <li class="nav-item">РАЗВЛЕЧЕНИЯ</li>
                 </ul>
             </navbar>
+
             <div class="right-section">
                 <button class="nav-btn">
                     <span>
                         Войти
                     </span>
                 </button>
+            </div>
+            <div class="burger-menu">
+                <img src="./icons/burger-bar.svg"/>
             </div>
         </header>
         <section class="main-section">
